<resources>
    <string name="app_name">Pocket community</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_login">登录</string>
    <string name="account_register">注册</string>
    <string name="account_fgt_pwd">忘记密码</string>
    <string name="frag_login_tel_hint">手机号</string>
    <string name="frag_login_pwd_hint">密码</string>
    <string name="frag_login_rmb_pwd">记住密码</string>
    <string name="frag_login_tel_null">请输入您的手机号</string>
    <string name="frag_login_pwd_null">请输入密码</string>
    <string name="account_confirm">验证</string>
    <string name="frag_fpw_id_null">请输入该账号绑定的身份证号码</string>
    <string name="frag_fpw_id_hint">该账号绑定的身份证号码</string>
    <string name="home_ng_notice">通知</string>
    <string name="home_ng_community">社区</string>
    <string name="home_ng_me">我</string>
    <string name="frag_notice_title">通知</string>
    <string name="action_avatar_title">avatar</string>
    <string name="action_name_title">name</string>
    <string name="back">返回</string>
    <string name="loading">加载中</string>
    <string name="frag_community_title">社区</string>
    <string name="frag_community_goto_park">停车</string>
    <string name="frag_community_goto_bill">账单</string>
    <string name="frag_community_goto_proposal">反馈</string>
    <string name="proposal_search">搜索</string>
    <string name="proposal_detail_recycle_title">处理进展</string>
    <string name="proposal_detail_return_btn">回退</string>
    <string name="proposal_detail_finish_btn">验收</string>
    <string name="proposal_detail_commit_btn">提交</string>
    <string name="proposal_detail_transfer_btn">转派</string>
    <string name="transfer_list_title">请选择处理人</string>
    <string name="add_title">标题</string>
    <string name="add_proposal_submit">提交</string>
    <string name="add_proposal_label">反馈</string>
    <string name="add_content">内容</string>
    <string name="dialog_back">返回</string>
    <string name="dialog_confirm">确认</string>
    <string name="add_notice_label">发布通知</string>
    <string name="frag_community_goto_verify">审核</string>
    <string name="frag_community_goto_management">用户管理</string>
    <string name="management_search">姓名/手机号/身份证号</string>
    <string name="add_user_label">添加一个用户</string>
    <string name="add_user_name">姓名</string>
    <string name="add_user_tel">手机号码</string>
    <string name="add_user_idNumber">身份证号码</string>
    <string name="frag_community_goto_building">住房管理</string>
    <string name="building_search">住房编号(1栋2单元301室：12301)</string>
    <string name="building_unit">单元</string>
    <string name="building_building">栋</string>
    <string name="building_room">室</string>
</resources>
