<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/frag_fpw_tel_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frag_login_tel_hint"
        android:inputType="number"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/frag_fpw_tel_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_login_tel_null"
        android:visibility="invisible"
        android:textColor="#F66495"
        />

    <EditText
        android:id="@+id/frag_fpw_id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frag_fpw_id_hint"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/frag_fpw_id_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_fpw_id_null"
        android:visibility="invisible"
        android:textColor="#F66495"
        />
    <Button
        android:id="@+id/frag_fpw_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_confirm"
        android:textColor="#fff"
        android:textSize="20sp"
        android:enabled="false"
        android:background="@drawable/enable_radius_button"
        android:layout_marginTop="200dp"
        />

</LinearLayout>