<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="#F4F4F4"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/frag_notice_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <ImageView
                android:id="@+id/add_notice_back"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_marginRight="5dp"
                android:scaleType="center"
                android:src="@mipmap/back_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/add_notice_label"
                android:textColor="#fff"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/add_notice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="20"
            android:background="@drawable/radius_edit_text"
            android:hint="@string/add_title"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/dash_line"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/add_notice_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="start"
            android:background="@drawable/radius_edit_text"
            android:hint="@string/add_content"
            />
        <Button
            android:id="@+id/add_notice_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_proposal_submit"
            android:background="@drawable/enable_radius_button"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:textColor="#fff"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>