<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/item_building_No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="No.15020401"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            >
            <TextView
                android:id="@+id/item_building_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building_building"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:id="@+id/item_building_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building_unit"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:id="@+id/item_building_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building_room"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/item_building_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:text="业主： 川普"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>